<resources>
    <string name="app_name">CP3405_Blanko</string>
    <string name="sign_in">Sign In</string>
    <string name="appsistant">Appsistant</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_name">User Name</string>
    <string name="this_is_where_the_user_question_will_display">This is where the user question will display</string>
    <string name="hi_there">Hi There</string>
    <string name="last_name_create">Last Name:</string>
    <string name="first_name_create">First Name:</string>
    <string name="question_create">Question:</string>
    <string name="answer_create">Answer:</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="add_account">Add Account</string>
    <string name="calendar">Calendar</string>
    <string name="contacts">Contacts</string>
    <string name="messages">Messages</string>
    <string name="email">Email</string>
    <string name="call">Call</string>
    <string name="settings">Settings</string>
</resources>