<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/Calendar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/calendar"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="50dp"
                android:text="@string/calendar"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/Contacts"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/contacts"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="50dp"
                android:text="@string/contacts"
                android:textAlignment="center"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/CalendarIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/calendar"
                android:paddingBottom="50dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/calendar_icon"/>

            <ImageView
                android:id="@+id/ContactsIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/contacts"
                android:paddingBottom="50dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/contact_icon" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/Messages"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/messages"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="50dp"
                android:text="@string/messages"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/Email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/emails"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="50dp"
                android:text="@string/email"
                android:textAlignment="center"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/MessagesIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/messages"
                android:paddingBottom="50dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/messages_icon"/>

            <ImageView
                android:id="@+id/EmailsIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/emails"
                android:paddingBottom="50dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/email_icon" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/Call"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/calls"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="50dp"
                android:text="@string/call"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/Settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/events"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="50dp"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textSize="30sp" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/CallsIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/calls"
                android:paddingBottom="50dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/call_icon"/>

            <ImageView
                android:id="@+id/SettingsIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/events"
                android:paddingBottom="50dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/settings_icon" />
        </TableRow>
    </TableLayout>

</androidx.appcompat.widget.LinearLayoutCompat>